Fix baseline misalignment and HTML semantics in NJWDS banner (#112)
* Added fixes to icon/seal styling

* remove box-sizing style on .nj-banner__header-seal

* update mail icon to be usa-icon--size-3 (20px by 20px)

* wip: cleaning up banner markup

* set new breakpoint so names get hidden before State of NJ text wraps to 3 lines

* add inline comment to explain breakpoint

* re-add banner config yml to document breakpoint

* add newline to banner.config.yml

* missing newline in yml comment

---------

--- a/src/sass/_uswds-theme-custom-styles.scss
+++ b/src/sass/_uswds-theme-custom-styles.scss
@@ -43,7 +43,10 @@ i.e.
 }
 .nj-banner__header li {
   display: none;
-  @include at-media("tablet") {
+
+  // Set min-width so the names are hidden before the stateOfNjText wraps to
+  // 3 lines
+  @media (min-width: 43rem) {
     display: inline;
   }
   @include u-margin-right(1);
